<resources>
    <string name="app_name">ReadMiu</string>

    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_favourite">Favorite</string>

    <string name="txtEdUser">Username</string>
    <string name="txtEdPass">Password</string>
    <string name="txtBtnLogin">Đăng Nhập</string>
    <string name="txtBtnRe">Đăng Ký</string>
    <string name="txtEdRePass">Re-Password</string>
    <string name="txtDoiMatKhau">Bạn quên mật khẩu ư ?</string>

    <string name="txtBtnNext">Tiếp</string>
    <string name="txtInfoUser">Thông tin</string>
    <string name="txtEdEmail">Email</string>
    <string name="txtFullname">Fullname</string>
    <string name="txtEdPhone">Phone</string>

    <string name="txtWecome">Chào mừng đến với ReadMiu.</string>
    <string name="txtMieuTa">Người phát triển phần mềm.</string>

    <string name="txtHoSo">Hồ sơ</string>
    <string name="txtMoDau">Hãy đăng nhập để sử dụng tất cả các chức năng của ReadMiu.</string>
    <string name="txtPhone"> 0339760892</string>
    <string name="txtEmail"> bacuong15423@gmail.com</string>
    <string name="txtAddress"> Cao đẳng FPT polytechnic</string>
    <string name="txtBtnLogout">Đăng xuất</string>
    <string name="txtDSYT">Danh sách yêu thích</string>
    <string name="txtLSD">Lịch sử đọc</string>
    <string name="txtDMK">Đổi mật khẩu</string>
    <string name="txtTTCN">Đổi thông tin</string>
    <string name="txtDPT">Chức năng đang trong giai đoạn phát triên.</string>
    <string name="txtTB">Thông báo</string>
    <string name="txtDC">Truyện Tranh Hot</string>
    <string name="txtKND">Không còn nội dung.</string>
    <string name="txtRetriPass">Lấy lại mật khẩu</string>
    <string name="txtBtnRetri">Lấy lại mật khẩu</string>
    <string name="txtDetail">Chi tiết truyện</string>
    <string name="txtNameComic">Tên truyện</string>
    <string name="txtRead">Bắt đầu đọc</string>
    <string name="txtBL">Bình luận</string>
    <string name="txtlogin">Để sử dụng chức năng này bạn cần đăng nhập.</string>
    <string name="txtHuy">Hủy</string>
    <string name="txtEdPassNew">Pass New</string>
    <string name="txtEdRePassNew">Re-PassNew</string>
    <string name="txtYeuThich">My Favorite</string>
    <string name="txtPassRetri">Hãy nhập đầy đủ thông tin để chúng tôi giúp bạn lấy lại tài khoản.</string>
    <string name="txtChangePass">Đổi mật khẩu</string>
    <string name="txtChangeInfo">Đổi thông tin</string>
    <string name="txtInfo">Hãy điền đầy đủ thông tin của bạn để có trải nghiệm tốt nhât.</string>
</resources>