<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/mau_nen"
    tools:context=".screen.activity.RegActivity">
    <TextView
        android:layout_marginTop="170dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/txtBtnRe"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEdUser"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_ed_username"
        app:helperTextTextColor="@color/red">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEdPass"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_ed_password"
        app:helperTextTextColor="@color/red">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            style="@style/TextInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEdRePass"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_ed_password"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_rePassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="50dp"
        android:id="@+id/btn_next"
        android:background="@drawable/custom_btn"
        android:text="@string/txtBtnNext"
        style="@style/AppCompatButton"/>

</LinearLayout>