<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mau_nen"
    tools:context=".screen.activity.LoginActivity"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="170dp"
            android:layout_marginBottom="50dp"
            android:text="@string/txtBtnLogin"
            android:gravity="center"
            style="@style/TextViewMax"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrUsername"
            style="@style/TextInputLayout"
            android:hint="@string/txtEdUser"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_ed_username"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_UserName"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrPassword"
            android:layout_marginTop="5dp"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtEdPass"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_ed_password"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_PassWord"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="50dp"
            android:id="@+id/btn_login"
            android:text="@string/txtBtnLogin"
            android:background="@drawable/custom_btn_color"
            style="@style/AppCompatButton"/>
        <TextView
            android:id="@+id/tv_resetPass"
            style="@style/TextViewMin"
            android:layout_margin="10dp"
            android:textStyle="italic"
            android:gravity="center"
            android:text="@string/txtDoiMatKhau"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_re"
        android:textColor="@color/mau_button"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_btn_none"
        android:text="@string/txtBtnRe"
        style="@style/AppCompatButton"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>