<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/mau_nen"
    tools:context=".screen.activity.InfoUserActivity">
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_backReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtInfoUser"
            android:textColor="@color/text"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hãy điền đầy đủ thông tin để có trải nghiệm tốt nhất."
        android:textSize="18dp"
        android:textStyle="italic"
        android:textColor="@color/text"
        android:layout_marginBottom="50dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="100dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white">
        <ImageView
            android:id="@+id/img_Avata"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_ed_username"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtFullname"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_ed_username"
        app:helperTextTextColor="@color/red">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_fullname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEdEmail"
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/ic_email"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEdPhone"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_phone"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="50dp"
        android:id="@+id/btn_dangky"
        android:background="@drawable/custom_btn"
        android:text="@string/txtBtnRe"
        style="@style/AppCompatButton"/>
</LinearLayout>