<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:context=".screen.activity.InfoUserActivity">
    <LinearLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_backChangePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_gravity="center"/>
            <TextView
                style="@style/TextViewTitle"
                android:text="@string/txtChangePass"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/background_login"
        android:layout_margin="15dp"
        android:padding="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrPassChange"
            style="@style/TextInputLayout"
            android:hint="@string/txtEdPass"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_ed_password"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_PassChange"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrPassNewChange"
            style="@style/TextInputLayout"
            android:hint="@string/txtEdPassNew"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_ed_password"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_PassNewChange"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrRePassChange"
            style="@style/TextInputLayout"
            android:hint="@string/txtEdRePassNew"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_ed_password"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_RePassChange"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                style="@style/TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="25dp"
            android:id="@+id/btn_DoiMatKhau"
            android:background="@drawable/custom_btn_color"
            android:text="@string/txtChangePass"
            style="@style/AppCompatButton"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>