<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:context=".screen.activity.InfoUserActivity">
    <LinearLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_backChangeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_gravity="center"/>
            <TextView
                style="@style/TextViewTitle"
                android:text="@string/txtChangeInfo"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/background_login"
        android:layout_margin="15dp"
        android:padding="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrFullnameChange"
            style="@style/TextInputLayout"
            android:hint="@string/txtFullname"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_ed_username"
            app:helperTextTextColor="@color/red">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_FullnameChange"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:layout_height="48dp"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrEmailChange"
            style="@style/TextInputLayout"
            android:hint="@string/txtEdEmail"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/ic_email"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_EmailChange"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="48dp"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtErrPhoneChange"
            style="@style/TextInputLayout"
            android:hint="@string/txtEdPhone"
            app:endIconMode="clear_text"
            app:counterMaxLength="10"
            app:startIconDrawable="@drawable/ic_phone"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_PhoneChange"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:maxLength="10"
                android:inputType="text"
                style="@style/TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="25dp"
            android:id="@+id/btn_ChangeInfo"
            android:background="@drawable/custom_btn_color"
            android:text="@string/txtChangeInfo"
            style="@style/AppCompatButton"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>