<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mau_nen"
    tools:context=".screen.activity.DetailStoryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="10dp"
                android:elevation="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_backDetal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tv_TenTruyen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/txtDetail"
                    android:textColor="@color/text"
                    android:textStyle="bold"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="350dp">
                <ImageView
                    android:id="@+id/img_anhBia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/img_err" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:elevation="10dp"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/mau_button"
                        android:layout_weight="9"
                        android:id="@+id/tv_tenTruyen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Tên truyện"
                        android:textSize="24dp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/img_Favorite"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_favorite_false"/>
                </LinearLayout>
                <LinearLayout
                    android:background="@drawable/custom_detail_img"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="11">
                    <TextView
                        android:textColor="@color/text"
                        android:id="@+id/tv_tenTacGia"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Tên tác giả"
                        android:textSize="18dp"/>
                    <TextView
                        android:textColor="@color/text"
                        android:id="@+id/tv_namXuatBan"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Năm xuất bản"
                        android:textSize="18dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/text"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_mota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mô tả truyện"
            android:textSize="18dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="15dp"
            android:id="@+id/btn_read"
            android:background="@drawable/custom_btn"
            android:text="@string/txtRead"
            android:layout_gravity="bottom"
            style="@style/AppCompatButton"/>
        <LinearLayout
            android:weightSum="13"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:text="@string/txtBL"/>
            <TextView
                android:id="@+id/tv_tongBL"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="bottom|end"
                android:textColor="@color/text"
                android:text="Tổng số bình luận"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recy_comment"/>
    </LinearLayout>
</ScrollView>